1.4.0
- Dispatcher goes through requests by age of requests/item instead of requests/stop
- Dispatcher is no longer limited to 1 train/s

1.3.5
- removed "log level" and "log output" settings
- added "message level" for console messages only (no level 4: debug)
- added "write debug logfile" checkbox for debug log generation into factorio-current.log
- changed provider prioritisation making deliveries merge more reliably (#trains > provider priority > #existing deliveries from provider > amount)
- fixed potential nil reference during stop update

1.3.4
- code cleanup
- train state change and train created events are only if LTN stops exist

1.3.3
- automatically set output combinator limit
- exceeding output slot size results in some signals being not generated by the output and a console message

1.3.2
- Chinese translation
- fixed error with no longer existing items #43

1.3.1
- added force to deliveries
- added support for force merging

1.3.0
- added Request Threshold and Provide Threshold
- removed Minimum Delivery Size and Ignore Minimum Delivery Size
- removed Best Effort, Provide Threshold = 1 does the same now
- added Disable Warnings Messages control signal #34
- limit messages to force where possible #40
- added workaround for fluid wagon residue #31
- removed toggle to loading list, stops only show expected inventory after loading

1.2.8
- added German locale
- fixed bug in Chinese locale
- switched to 128x128 tech icon
- overloaded trains no longer cause requesters to flip to providers during delivery #33
- set expected train inventory to default to active

1.2.7
- fixed potential nil references in first_signal and stop ghost entities

1.2.6
- fixed error when schedule is referencing non existing items

1.2.5
- replaced workaround with get_fluid_count and get_fluid_contents

1.2.4
- added toggle between output of positive load, negative unload amount and expected train inventory after (un-)loading
- added Chinese locale by 745275633