@@ -1,6 +1,7 @@
 1.4.0
 - Dispatcher goes through requests by age of requests/item instead of requests/stop
 - Dispatcher is no longer limited to 1 train/s
+- spread dispatcher update over 3 ticks
 
 1.3.5
 - removed "log level" and "log output" settings
